fix: created "visible mode" functional in InputField comp.

--- a/src/components/forms/input-field/InputField.module.scss
+++ b/src/components/forms/input-field/InputField.module.scss
@@ -60,3 +60,37 @@
     color: red;
     text-transform: lowercase;
 }
+
+.visibleModeButtonStyle {
+    position: relative;
+    width: 80px;
+    height: auto;
+    text-align: center;
+    padding: 4px 2px;
+    background-color: rgb(187, 187, 187);
+    color: white;
+    cursor: pointer;
+
+    &:active {
+        background-color: white;
+        color: gray;
+    }
+
+}
+
+.visibleModeButtonStyleActive {
+    position: relative;
+    width: 80px;
+    height: auto;
+    text-align: center;
+    padding: 4px 2px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(132, 132, 132);
+    cursor: pointer;
+
+    &:active {
+        background-color: white;
+        color: gray;
+    }
+
+}
